<resources>
    <string name="app_name">FabricaDePelotas</string>
    <string name="nada"></string>
    <string name="asignarTurno">Turno</string>
    <string name="asignarPeriodo">Periodo</string>
    <string name="asignarNumeroMaquina"># Máquina</string>
    <string name="asignar">Asignar</string>
    <string name="asignarColor">Asignar Color de Planta</string>
    <string name="codigoborrar">Código Borrar/Actualizar</string>
    <string name="empresa">Fabrica de Pelotas</string>
    <string name="MenuPrincipal">Menú Principal</string>
    <string name="regresarMenuPrincipal">Regresar al Menú Principal</string>
    <string name="ConsultaTablas">Consultar Información</string>
    <string name="regresarConsultaTabla">Regresar al Menú de Consulta</string>
    <string name="tablaPlanta">Información de Planta</string>
    <string name="tablaMaquina">Información de Máquina</string>
    <string name="tablaTecnico">Información de Técnico</string>
    <string name="TablasMenu">Ingresar Información</string>
    <string name="MenuTablas">Gestión de la Producción</string>
    <string name="regresarMenuTablas">Regresar al Menú de Tablas</string>
    <string name="SelecTablas">Selecciona: </string>
    <string name="Planta">Planta</string>
    <string name="colorPlanta">Color: </string>
    <string name="superficiePlanta">Superficie: </string>
    <string name="nombreProcesoPlanta">Nombre del Proceso: </string>
    <string name="gradoComplejidadPlanta">Grado de Complejidad: </string>
    <string name="grados">(Alto,Medio,Bajo)</string>
    <string name="Maquinas">Máquina</string>
    <string name="numeroMaquina">Número de Máquina: </string>
    <string name="marcaMaquina">Marca: </string>
    <string name="modeloMaquina">Modelo: </string>
    <string name="Tecnico">Técnico</string>
    <string name="documentoTecnico">Documento: </string>
    <string name="nombrecompletoTecnico">Nombre Completo: </string>
    <string name="fechanacimientoTecnico">Fecha de Nacimiento: </string>
    <string name="telefonoTecnico">Teléfono: </string>
    <string name="crearDato">C</string>
    <string name="leerDato">R</string>
    <string name="actualizarDato">U</string>
    <string name="borrarDato">D</string>
    <string name="ippc">10.10.12.114</string>
</resources>